aligns close button to text in notification when text runs over 2 lines (and fixes broken remove button for nin input)

--- a/src/login/styles/_Nins.scss
+++ b/src/login/styles/_Nins.scss
@@ -46,6 +46,7 @@ h3 {
 #nin-number-container {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
   & a {
     color: $orange-highlight;
     transition: all 0.5s ease;
