--- a/src/login/styles/_Notifications.scss
+++ b/src/login/styles/_Notifications.scss
@@ -13,11 +13,10 @@
   position: inherit;
   padding: 0.75rem 2rem 0.75rem 1.25rem;
   margin: 0;
-  border: none;
   border-radius: 0;
   display: flex;
   flex-direction: row-reverse;
-  align-items: center;
+  align-items: baseline;
   &.alert-danger,
   &.alert-success {
     color: $orange-highlight;
@@ -42,23 +41,23 @@
   }
 }
 
-@media (max-width: 812px) {
+@media (max-width: 823px) {
   .notifications-area {
     height: 49px;
   }
-  .alert {
+  .alert.alert-dismissible {
     padding: 0.5rem 1rem;
-  }
-  .alert span {
-    font-size: 1rem;
-    width: 75%;
-  }
-}
-@media (max-width: 768px) {
-  .alert span {
-    width: 100%;
-  }
-  .alert-dismissible .close {
-    padding: 0.25rem 0.75rem;
+    & span {
+      font-size: 1rem;
+      width: 100%;
+    }
   }
 }
+// @media (max-width: 768px) {
+//   .alert span {
+//     width: 100%;
+//   }
+//   .alert-dismissible .close {
+//     padding: 0.25rem 0.75rem;
+//   }
+// }
